# autoresearch-dllm

./: .gen_sedd_samples.py  .gitignore  .run_elo.py  .train_600s.py  .train_adaln.py  .train_sedd.py  README.md  detailed_experiments.csv  duel_eval.py  model.py  policies.py  prepare.py  program.md  pyproject.toml  results.tsv  train.py
outputs/: gpt_reference.jsonl  sedd_reference.jsonl
